# tag-all

./: .gitignore  Cargo.toml  Trunk.toml  index.html  styles.css
.agent/workflows/: tauri-ipc-naming.md
.github/scripts/: configure-android-signing.sh
.github/workflows/: release.yml
crates/leptos-dragdrop/: Cargo.toml
crates/leptos-dragdrop/src/: lib.rs
crates/rolling-logger/: Cargo.toml
crates/rolling-logger/src/: lib.rs
firefox-extension/: DEVELOPER.md  README.md  USER_GUIDE.md  background.js  content-extract.js  manifest.json
firefox-extension/config/: config.css  config.html  config.js
firefox-extension/icons/: README.md
firefox-extension/lib/: DEPENDENCIES.md  SETUP_GUIDE.md  libsql-client.js
firefox-extension/sidebar/: sidebar.css  sidebar.html  sidebar.js
src/: app.rs  commands.rs  context.rs  main.rs  markdown.rs  mobile.rs  models.rs  store.rs  tree.rs
src-tauri/: Cargo.toml  build_errors.txt  build_errors2.txt  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard_cmd.rs  dialog_cmd.rs  file_cmd.rs  item_cmd.rs  mod.rs  sync_cmd.rs  tag_cmd.rs  window_cmd.rs  workspace_cmd.rs
src-tauri/src/domain/: entity.rs  file_id.rs  item.rs  mod.rs  tag.rs  workspace.rs  workspace_dir.rs
src-tauri/src/repository/: db.rs  item_repo.rs  mod.rs  tag_repo.rs  tests.rs  traits.rs  window_state_repo.rs  workspace_repo.rs
src-tauri/src/repository/item/: item_hierarchy.rs  item_positioning.rs  item_repo.rs  item_workspace.rs  mod.rs
src-tauri/src/repository/tag/: item_tag.rs  mod.rs  tag_hierarchy.rs  tag_positioning.rs  tag_repo.rs
src/commands/: clipboard.rs  dialog.rs  files.rs  item.rs  mod.rs  sync.rs  tag.rs  window.rs  workspace.rs
src/components/: delete_confirm_button.rs  drop_zone.rs  editor_target.rs  file_list.rs  file_tree.rs  files_workspace.rs  folder_sidebar.rs  item_tree_view.rs  memo_editor_column.rs  mod.rs  new_item_form.rs  sync_modal.rs  tag_autocomplete.rs  tag_column.rs  tag_editor.rs  title_bar.rs  tree_item.rs  type_selector.rs  workspace_tab_bar.rs
