[package]
name = "tag-all-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos 0.8 (matching workspace version)
leptos = { version = "0.8", features = ["csr"] }
reactive_stores = "0.2"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "Event",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "ClipboardEvent",
    "File",
    "FileReader",
    "Blob",
    "DomRect"
]}

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Error handling
console_error_panic_hook = "0.1.7"

# Timers for WASM
gloo-timers = { version = "0.3", features = ["futures"] }

# Markdown parsing
pulldown-cmark = "0.10"
syntect = { version = "5.0", default-features = false, features = ["default-fancy", "html"] }
percent-encoding = "2.3"

# DnD
leptos-dragdrop = { path = "crates/leptos-dragdrop" }

# Shared sync UI components (WASM only)
tauri-sync-db-frontend = { path = "../crates/tauri-sync-db-frontend" }

[workspace]
members = ["src-tauri", "crates/leptos-dragdrop", "crates/rolling-logger"]

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
log = "0.4"
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
