[package]
name = "tag-all"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tag_all_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async support
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database (libsql for Turso cloud sync support)
libsql = { version = "0.9", features = ["sync"] }
pinyin = "0.10.0"
blake3 = "1.8.2"
walker = "1.0.1"
open = "5.3.3"
tauri-plugin-fs = "2.4.5"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
base64 = "0.22"
regex = "1"
