[package]
name = "leptos-dragdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "MouseEvent", "HtmlElement", "HtmlInputElement", "HtmlButtonElement", "DomRect", "Event", "EventTarget", "Performance"] }
