[package]
name = "rolling-logger"
version = "0.1.0"
edition = "2021"
description = "A rolling file logger with circular buffer for Tauri applications"
authors = ["you"]
license = "MIT"

[dependencies]
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
tempfile = { workspace = true }